# BareAgent

./: .gitattributes  .gitignore  BAREAGENT.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  config.toml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md  state-persistence.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-27-lsp-client/: prd.md  task.json
.trellis/tasks/05-27-mcp/: prd.md  task.json
.trellis/tasks/05-27-mcp-client-tools/: task.json
.trellis/tasks/05-27-mcp-hardening/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/05-27-mcp-multimodal/: check.jsonl  prd.md  task.json
.trellis/tasks/05-27-mcp-permission-repl/: implement.jsonl  task.json
.trellis/tasks/05-27-mcp-resources-prompts/: implement.jsonl  prd.md  task.json
.trellis/tasks/05-27-mcp-transport/: implement.jsonl  prd.md  task.json
.trellis/tasks/05-28-lsp-integration/: check.jsonl  task.json
.trellis/tasks/05-28-lsp-skeleton/: task.json
.trellis/tasks/05-31-bash-windows-gbk-utf-8/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/05-31-web-search-bing-html-key/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-20-ci-manual-linux-job-socket-http/: check.jsonl  task.json
.trellis/tasks/06-20-ci-pre-push-main/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-21-ci-windows-latest-job/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/ducat/: index.md  journal-1.md
docs/: book.toml  index.md  package-lock.json  package.json  releasing.md  tracing.md
docs/.vitepress/: config.mts
docs/guide/: ch01-overview.md  ch02-quickstart.md  ch03-configuration.md  ch04-repl.md  ch05-tools.md  ch06-permission.md  ch07-provider.md  ch08-agent-loop.md  ch09-subagent.md  ch10-team.md  ch11-compaction.md  ch12-tasks-todo.md  ch13-skills.md  ch14-background.md  ch15-development.md  ch16-debug.md  ch17-tracing.md
docs/src/: SUMMARY.md  ch01-overview.md  ch02-quickstart.md  ch03-configuration.md  ch04-repl.md  ch05-tools.md  ch06-permission.md  ch07-provider.md  ch08-agent-loop.md  ch09-subagent.md  ch10-team.md  ch11-compaction.md  ch12-tasks-todo.md  ch13-skills.md  ch14-background.md  ch15-development.md
plans/: docs-outline.md
scripts/: ci-check.sh  ci_notify.py  setup-hooks.sh
skills/code-review/: SKILL.md
skills/git/: SKILL.md
src/: __init__.py  main.py
src/bareagent/: __init__.py  config.toml  main.py
src/bareagent/concurrency/: __init__.py  background.py  notification.py  scheduler.py
src/bareagent/core/: config_paths.py  file_recency.py  goal.py  loop.py  tools.py  workflow_registry.py
src/bareagent/debug/: web_viewer.py
src/bareagent/hooks/: config.py  engine.py  events.py
src/bareagent/lsp/: __init__.py  config.py  diagnostics.py  manager.py  tools.py  workspace_edit.py
src/bareagent/mcp/: _sse.py  client.py  config.py  errors.py  manager.py  protocol.py  registry.py
src/bareagent/memory/: code_index.py  compact.py  conversation_io.py  embedding.py  persistent.py  repo_map.py  repo_map_extract.py  session_tree.py  token_counter.py  token_tracker.py  transcript.py
src/bareagent/permission/: guard.py
src/bareagent/planning/: __init__.py  agent_types.py  skill_store.py  skills.py  subagent.py  subagent_registry.py  tasks.py  todo.py  worktree.py
src/bareagent/provider/: anthropic.py  base.py  factory.py  openai.py  presets.py  setup.py
src/bareagent/team/: __init__.py  autonomous.py  mailbox.py  manager.py  protocols.py
src/bareagent/tracing/: __init__.py  _api.py  _proxy.py  composite.py  json_file.py  langfuse.py  otel.py  setup.py
src/bareagent/ui/: __init__.py  console.py  stream.py  theme.py
src/concurrency/: __init__.py  background.py  notification.py  scheduler.py
src/core/: __init__.py  context.py  fileutil.py  loop.py  retry.py  sandbox.py  schema.py  tools.py  workflow.py  workflow_registry.py
src/core/handlers/: bash.py  file_edit.py  file_read.py  file_write.py  glob_search.py  (+10 more)
src/debug/: interaction_log.py  viewer.html  web_viewer.py
src/hooks/: __init__.py  config.py  engine.py  errors.py
src/lsp/: __init__.py  config.py  coord.py  diagnostics.py  errors.py  manager.py  tools.py  workspace_edit.py
src/mcp/: __init__.py  client.py  config.py  errors.py  manager.py  registry.py
src/memory/: __init__.py  compact.py  conversation_io.py  embedding.py  persistent.py  token_counter.py  token_tracker.py  transcript.py
src/permission/: __init__.py  guard.py  rules.py
src/planning/: __init__.py  agent_types.py  skill_gen.py  skill_store.py  skills.py  subagent.py  subagent_registry.py  tasks.py  todo.py  worktree.py
src/provider/: __init__.py  anthropic.py  base.py  factory.py  openai.py  setup.py
src/team/: __init__.py  autonomous.py  mailbox.py  manager.py  protocols.py
src/tracing/: __init__.py  _api.py  _proxy.py  composite.py  json_file.py  langfuse.py  otel.py  setup.py
src/ui/: __init__.py  app.py  console.py  prompt.py  protocol.py  stream.py  theme.py
tests/: conftest.py  test_agent_types.py  test_ci_visibility.py  test_code_index.py  test_compact.py  test_compact_manual.py  test_config_manual.py  test_config_merge.py  test_config_read.py  test_config_reload.py  test_context.py  test_conversation_io.py  test_cost_config.py  test_dangerous_patterns.py  test_embedding.py  test_experiential_skill_gen.py  test_file_read_multimodal.py  test_file_recency.py  test_file_tools.py  test_goal.py  test_hooks_config.py  test_hooks_engine.py  test_interaction_log.py  test_loop.py  test_lsp_agent_types.py  test_lsp_auto_diagnostics_hook.py  test_lsp_config.py  test_lsp_coord.py  test_lsp_diagnostics.py  test_lsp_e2e_manual.py  test_lsp_manager.py  test_lsp_manager_disconnect.py  test_lsp_registry.py  test_lsp_repl.py  test_lsp_tools.py  test_lsp_workspace_edit.py  test_mailbox_manual.py  test_main.py  test_mcp_client.py  test_mcp_config.py  (+59 more)
(+230 files in other folders)
