[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bareagent"
version = "0.1.0"
description = "BareAgent is a pure Python terminal code agent."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52",
    "openai>=1.70",
    "httpx>=0.27",
    "prompt-toolkit >= 3.0",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]
langfuse = ["langfuse>=2.0"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
all-tracing = ["bareagent[langfuse,otel]"]
lsp = ["multilspy>=0.0.15"]

[project.scripts]
bareagent = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"config.toml" = "config.toml"
"skills" = "skills"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "skills",
    "config.toml",
    "README.md",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not manual'"
markers = [
    "manual: needs manual run / external services / real sockets (excluded by default; run with -m manual)",
    "slow: long-running tests",
    "e2e: end-to-end tests needing external servers (lsp/mcp/api)",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
