[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "bareagent-cli"
dynamic = ["version"]
description = "A pure Python terminal code agent — pluggable LLM providers, fine-grained permissions, multi-agent coordination, and an extensible skill system."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ducat", email = "no.525350@gmail.com" }]
keywords = ["agent", "llm", "cli", "terminal", "coding-agent", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52",
    "openai>=1.70",
    "httpx>=0.27",
    "prompt-toolkit >= 3.0",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]
langfuse = ["langfuse>=2.0"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
all-tracing = ["bareagent-cli[langfuse,otel]"]
lsp = ["multilspy>=0.0.15"]
pdf = ["pypdf>=4.0"]
embeddings = ["fastembed>=0.8"]
repo-map = [
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
]

[project.scripts]
bareagent = "bareagent.main:main"

[project.urls]
Homepage = "https://github.com/525300887039/BareAgent"
Repository = "https://github.com/525300887039/BareAgent"
Issues = "https://github.com/525300887039/BareAgent/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
tag-pattern = '^v?(?P<version>\d+\.\d+\.\d+.*)$'
# Drop the +local segment so untagged dev builds (e.g. the TestPyPI dry run via
# workflow_dispatch) produce PyPI-uploadable versions like 0.1.1.devN. Clean
# release tags still resolve to a bare X.Y.Z (no local segment to drop).
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["src/bareagent"]
# config.toml + skills/** ride along automatically — they live inside src/bareagent/.

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `from tests.conftest import ...` resolves under
# plain `pytest` / `uv run pytest` (CI). Without it, only `python -m pytest`
# (which prepends cwd) works, so CI failed to import test_main / test_config_reload
# / test_memory_tool / test_provider_factory with "No module named 'tests'".
pythonpath = ["."]
addopts = "-m 'not manual'"
markers = [
    "manual: needs manual run / external services / real sockets (excluded by default; run with -m manual)",
    "slow: long-running tests",
    "e2e: end-to-end tests needing external servers (lsp/mcp/api)",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src/bareagent"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
